Java 9 compatibility fix for Base64 encoding